--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240423183410">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240424135215">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +69,6 @@
 						<div class="hero__actions">
 							<button type="submit" class="button button--hero">
 								Buy $BOO
-								<span class="button__link"><img src="img/go-to.svg" alt="Image" /></span>
 							</button>
 							<button type="submit" class="button button--hero button--white">
 								Chart
@@ -136,13 +135,117 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__buy buy">
+				<div class="strip strip--top-left">
+					<div class="buy__container">
+						<h2 class="buy__title subtitle">How to Buy?</h2>
+						<div class="buy__img img-decor">
+							<img class="buy__image ibg" src="img/paw.svg" alt="Image" />
+						</div>
+					</div>
+				</div>
+				<div class="buy-list">
+					<div class="buy-list__container">
+						<div class="buy-list__list">
+							<article class="buy__item item-buy">
+								<h4 class="item-buy__title">Create a Wallet</h4>
+								<div class="item-buy__text">
+									<p>
+										You can obtain Tronlink or any other wallet app for free
+										from the app store or Google Play store. If you are using
+										a desktop computer, you can download the Google Chrome
+										extension by visiting tronlink.org.
+									</p>
+								</div>
+								<div class="item-buy__icon">
+									<img class="item-buy__image ibg ibg--contain" src="img/wallet.svg" alt="Image" />
+								</div>
+								<div class="item-buy__number">
+									<img class="ibg" src="img/1.webp" alt="Image" />
+								</div>
+							</article>
+							<article class="buy__item item-buy">
+								<h4 class="item-buy__title">Get some TRON</h4>
+								<div class="item-buy__text">
+									<p>
+										Have TRON in your wallet to switch to $BOO. If you do not
+										have any TRON, you can buy directly on tronlink, transfer
+										from another wallet, or buy on another exchange and send
+										it to your wallet.
+									</p>
+								</div>
+								<div class="item-buy__icon">
+									<img class="item-buy__image ibg ibg--contain" src="img/tron.svg" alt="Image" />
+								</div>
+								<div class="item-buy__number">
+									<img class="ibg" src="img/2.webp" alt="Image" />
+								</div>
+							</article>
+							<article class="buy__item item-buy">
+								<h4 class="item-buy__title">Buy from our Web</h4>
+								<div class="item-buy__text">
+									<p>
+										You need to have TRON available in your wallet. If you do
+										not already have TRON you can buy TRON directly on
+										Tronlink, transfer it from another wallet, or purchase it
+										on another exchange and send it to your wallet.
+									</p>
+								</div>
+								<div class="item-buy__icon">
+									<img class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.svg" alt="Image" />
+								</div>
+								<div class="item-buy__number">
+									<img class="ibg" src="img/3.webp" alt="Image" />
+								</div>
+							</article>
+							<article class="buy__item item-buy">
+								<h4 class="item-buy__title">Swap TRON for $BOO</h4>
+								<div class="item-buy__text">
+									<p>
+										Use our contract address when switching TRON for our
+										token. You may need to use a +1.5% slippage to ensure that
+										your transaction goes through at the best possible price.
+									</p>
+								</div>
+								<div class="item-buy__swap">
+									<h5 class="item-buy__swap-title">Booswap:</h5>
+									<div class="item-buy__swap-text">
+										CA: TRStG5LKhCFmVdKETp1SQHk18U
+										<img class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image" />
+									</div>
+								</div>
+								<div class="item-buy__number">
+									<img class="ibg" src="img/4.webp" alt="Image" />
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__booswap booswap">
+				<div class="booswap__strip strip">
+					<div class="booswap__container">
+						<div class="booswap__img img-decor img-decor--right">
+							<img class="booswap__image ibg" src="img/swap.svg" alt="Image" />
+						</div>
+						<h2 class="booswap__title subtitle">BooSwap.</h2>
+					</div>
+				</div>
+				<div class="booswap__container">
+					<img class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image" />
+					<img class="ibg ibg--contain" src="img/paw.svg" alt="Image" />
+					<img class="ibg ibg--contain" src="img/bone-2.svg" alt="Image" />
+					<img class="ibg ibg--contain" src="img/bone-1.svg" alt="Image" />
+					<img class="ibg ibg--contain" src="img/bowl.svg" alt="Image" />
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240423183410"></script>
+	<script src="js/app.min.js?_v=20240424135215"></script>
 </body>
 
 </html>
