--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240424135215">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240424171601">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 					<div class="hero__img">
-						<img class="hero__image ibg ibg--contain" src="img/hero-img.webp" alt="dog image" />
+						<img class="hero__image ibg ibg--contain" src="img/dog.webp" alt="dog image" />
 					</div>
 				</div>
 
@@ -87,7 +87,7 @@
 								<a href="#"><img class="social__link ibg" src="img/1.svg" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/2.svg" alt="Image" /></a>
+								<a href="#"><img class="social__link ibg" src="img/x.webp" alt="Image" /></a>
 							</li>
 							<li class="social__item">
 								<a href="#"><img class="social__link ibg" src="img/3.svg" alt="Image" /></a>
@@ -96,7 +96,7 @@
 								<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/5.svg" alt="Image" /></a>
+								<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image" /></a>
 							</li>
 						</ul>
 					</div>
@@ -239,13 +239,127 @@
 					<img class="ibg ibg--contain" src="img/bowl.svg" alt="Image" />
 				</div>
 			</section>
+			<section class="page__tokenomics tokenomics">
+				<div class="strip strip--top-left">
+					<div class="tokenomics__container">
+						<h2 class="tokenomics__title subtitle">Tokenomics</h2>
+						<div class="tokenomics__img img-decor">
+							<img class="tokenomics__image ibg" src="img/dollar.svg" alt="Image" />
+						</div>
+					</div>
+				</div>
+				<div class="tokenomics__container">
+					<div class="tokenomics__list">
+						<article class="tokenomics__item item-tokenomics">
+							<div class="item-tokenomics__header">
+								<h4 class="item-tokenomics__title">Token Information</h4>
+								<div class="item-tokenomics__decor">
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.svg" alt="Image" />
+								</div>
+							</div>
+							<div class="item-tokenomics__body">
+								<div class="item-tokenomics__row item-tokenomics__row--highlight">
+									<div>Token Name</div>
+									<div>$BOO</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Network</div>
+									<div>TRON</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Tax Fees</div>
+									<div>0/0</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Slippage</div>
+									<div>0.5%</div>
+								</div>
+							</div>
+						</article>
+						<article class="tokenomics__item item-tokenomics">
+							<div class="item-tokenomics__header">
+								<h4 class="item-tokenomics__title">Token Information</h4>
+								<div class="item-tokenomics__decor">
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.svg" alt="Image" />
+								</div>
+							</div>
+							<div class="item-tokenomics__body">
+								<div class="item-tokenomics__row">
+									<div>Token Name</div>
+									<div>TTRTG...</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Initial Supply</div>
+									<div>
+										420.69 <br />
+										Billion
+									</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Circulating Supply</div>
+									<div>
+										210.34 <br />
+										Billion
+									</div>
+								</div>
+								<div class="item-tokenomics__row">
+									<div>Liquidity</div>
+									<div>BURNED</div>
+								</div>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__column">
+					<div class="footer__title">Boo.</div>
+					<div class="footer__decor">
+						<img class="footer__decor-img ibg ibg--contain" src="img/bone.svg" alt="Image" />
+					</div>
+					<div class="footer__text">
+						<p>
+							$BOO is a meme coin with no intrinsic value or expectation of
+							financial return. There is no formal roadmap. The coin is for
+							entertainment purposes only.
+						</p>
+					</div>
+				</div>
+				<div class="footer__social social">
+					<ul class="social__list">
+						<li class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+						</li>
+						<li class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+						</li>
+						<li class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+						</li>
+						<li class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+						</li>
+						<li class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer__copy">
+					Made by
+					<a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a>
+					@2024
+				</div>
+				<div class="footer__img">
+					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image" />
+				</div>
 			</div>
+			<img class="footer__image-decor ibg" src="img/rays.webp" alt="Image" />
 		</footer>
+
 	</div>
-	<script src="js/app.min.js?_v=20240424135215"></script>
+	<script src="js/app.min.js?_v=20240424171601"></script>
 </body>
 
 </html>
