--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240424180546">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425114721">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,14 +50,14 @@
 			<section class="page__hero hero">
 				<img class="hero__decor ibg" src="img/rays.webp" alt="Image" />
 				<div class="hero__container">
-					<div class="hero__body">
+					<div data-prlx-mouse class="hero__body">
 						<div class="hero__title-block">
 							<h1 class="hero__title title">
 								Welcome to <br />
 								<span class="hero__highligh">Boo.</span>
 							</h1>
 							<div class="hero__title-bone ibg">
-								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.svg" alt="bone image" />
+								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image" />
 							</div>
 						</div>
 						<div class="hero__label">
@@ -84,19 +84,19 @@
 					<div class="social__container">
 						<ul class="social__list">
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image" /></a>
 							</li>
 							<li class="social__item">
-								<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image" /></a>
 							</li>
 						</ul>
 					</div>
@@ -104,19 +104,22 @@
 			</section>
 			<section class="page__what what">
 				<div class="what__container">
-					<div class="what__img">
-						<img class="what__image ibg" src="img/news.webp" alt="Image" />
+					<div data-prlx-parent class="what__img">
+						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image" />
 					</div>
 					<div class="what__body">
-						<div class="what__label button button--no-event">
+						<div data-prlx-mouse class="what__label button button--no-event">
 							What is $BOO?
 							<div class="what__decor">
-								<img class="what__image-decor ibg" src="img/bone-1.svg" alt="Image" />
-								<img class="what__image-decor-2 ellipse" src="img/ellipse-decor.svg" alt="Image" />
+								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image" />
+								<!-- <img
+                    class="what__image-decor-2 ellipse"
+                    src="img/ellipse-decor.svg"
+                    alt="Image" /> -->
 							</div>
 						</div>
 
-						<div class="what__blcok">
+						<div data-watch class="what__blok">
 							<div class="what__text">
 								<p>
 									Boo the world's cutest dog a Pomeranian, born on March 16th,
@@ -138,16 +141,16 @@
 			<section class="page__buy buy">
 				<div class="strip strip--top-left">
 					<div class="buy__container">
-						<h2 class="buy__title subtitle">How to Buy?</h2>
-						<div class="buy__img img-decor">
-							<img class="buy__image ibg" src="img/paw.svg" alt="Image" />
+						<h2 data-prlx-mouse class="buy__title subtitle">How to Buy?</h2>
+						<div data-prlx-mouse class="buy__img img-decor">
+							<img class="buy__image ibg" src="img/paw.webp" alt="Image" />
 						</div>
 					</div>
 				</div>
 				<div class="buy-list">
 					<div class="buy-list__container">
 						<div class="buy-list__list">
-							<article class="buy__item item-buy">
+							<article data-watch class="buy__item item-buy">
 								<h4 class="item-buy__title">Create a Wallet</h4>
 								<div class="item-buy__text">
 									<p>
@@ -158,13 +161,13 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img class="item-buy__image ibg ibg--contain" src="img/wallet.svg" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/wallet.webp" alt="Image" />
 								</div>
 								<div class="item-buy__number">
-									<img class="ibg" src="img/1.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/1.webp" alt="Image" />
 								</div>
 							</article>
-							<article class="buy__item item-buy">
+							<article data-watch class="buy__item item-buy">
 								<h4 class="item-buy__title">Get some TRON</h4>
 								<div class="item-buy__text">
 									<p>
@@ -175,13 +178,13 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img class="item-buy__image ibg ibg--contain" src="img/tron.svg" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/tron.webp" alt="Image" />
 								</div>
 								<div class="item-buy__number">
-									<img class="ibg" src="img/2.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/2.webp" alt="Image" />
 								</div>
 							</article>
-							<article class="buy__item item-buy">
+							<article data-watch class="buy__item item-buy">
 								<h4 class="item-buy__title">Buy from our Web</h4>
 								<div class="item-buy__text">
 									<p>
@@ -192,13 +195,13 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.svg" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.webp" alt="Image" />
 								</div>
 								<div class="item-buy__number">
-									<img class="ibg" src="img/3.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/3.webp" alt="Image" />
 								</div>
 							</article>
-							<article class="buy__item item-buy">
+							<article data-watch class="buy__item item-buy">
 								<h4 class="item-buy__title">Swap TRON for $BOO</h4>
 								<div class="item-buy__text">
 									<p>
@@ -211,11 +214,11 @@
 									<h5 class="item-buy__swap-title">Booswap:</h5>
 									<div class="item-buy__swap-text">
 										CA: TRStG5LKhCFmVdKETp1SQHk18U
-										<img class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image" />
+										<img data-prlx-mouse class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image" />
 									</div>
 								</div>
 								<div class="item-buy__number">
-									<img class="ibg" src="img/4.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image" />
 								</div>
 							</article>
 						</div>
@@ -225,36 +228,38 @@
 			<section class="page__booswap booswap">
 				<div class="booswap__strip strip">
 					<div class="booswap__container">
-						<div class="booswap__img img-decor img-decor--right">
-							<img class="booswap__image ibg" src="img/swap.svg" alt="Image" />
+						<div data-prlx-mouse class="booswap__img img-decor img-decor--right">
+							<img class="booswap__image ibg" src="img/swap.webp" alt="Image" />
 						</div>
-						<h2 class="booswap__title subtitle">BooSwap.</h2>
+						<h2 data-prlx-mouse class="booswap__title subtitle">BooSwap.</h2>
 					</div>
 				</div>
 				<div class="booswap__container">
-					<img class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image" />
-					<img class="ibg ibg--contain" src="img/paw.svg" alt="Image" />
-					<img class="ibg ibg--contain" src="img/bone-2.svg" alt="Image" />
-					<img class="ibg ibg--contain" src="img/bone-1.svg" alt="Image" />
-					<img class="ibg ibg--contain" src="img/bowl.svg" alt="Image" />
+					<img data-watch class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image" />
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/paw.webp" alt="Image" />
+					<img data-prlx-mouse class="booswap__bone-rotate ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bowl.webp" alt="Image" />
 				</div>
 			</section>
 			<section class="page__tokenomics tokenomics">
-				<div class="strip strip--top-left">
+				<div class="strip strip--top-left strip--add-pb">
 					<div class="tokenomics__container">
-						<h2 class="tokenomics__title subtitle">Tokenomics</h2>
-						<div class="tokenomics__img img-decor">
-							<img class="tokenomics__image ibg" src="img/dollar.svg" alt="Image" />
+						<h2 data-prlx-mouse class="tokenomics__title subtitle">
+							Tokenomics
+						</h2>
+						<div data-prlx-mouse class="tokenomics__img img-decor">
+							<img class="tokenomics__image ibg" src="img/dollar.webp" alt="Image" />
 						</div>
 					</div>
 				</div>
 				<div class="tokenomics__container">
 					<div class="tokenomics__list">
-						<article class="tokenomics__item item-tokenomics">
+						<article data-watch class="tokenomics__item item-tokenomics">
 							<div class="item-tokenomics__header">
 								<h4 class="item-tokenomics__title">Token Information</h4>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.svg" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.webp" alt="Image" />
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -276,11 +281,11 @@
 								</div>
 							</div>
 						</article>
-						<article class="tokenomics__item item-tokenomics">
+						<article data-watch class="tokenomics__item item-tokenomics">
 							<div class="item-tokenomics__header">
 								<h4 class="item-tokenomics__title">Token Information</h4>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.svg" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.webp" alt="Image" />
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -317,7 +322,7 @@
 				<div class="footer__column">
 					<div class="footer__title">Boo.</div>
 					<div class="footer__decor">
-						<img class="footer__decor-img ibg ibg--contain" src="img/bone.svg" alt="Image" />
+						<img class="footer__decor-img ibg ibg--contain" src="img/bone.webp" alt="Image" />
 					</div>
 					<div class="footer__text">
 						<p>
@@ -330,26 +335,29 @@
 				<div class="footer__social social">
 					<ul class="social__list">
 						<li class="social__item">
-							<a href="#"><img class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#"><img class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#"><img class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image" /></a>
 						</li>
 						<li class="social__item">
-							<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image" /></a>
 						</li>
 					</ul>
 				</div>
+				<!-- <div class="footer__copy">
+      Made by
+      <a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a>
+      @2024
+    </div> -->
 				<div class="footer__copy">
-					Made by
-					<a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a>
-					@2024
+					Made by © 2024 Boo • All Rights Reserved @2024
 				</div>
 				<div class="footer__img">
 					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image" />
@@ -359,7 +367,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240424180546"></script>
+	<script src="js/app.min.js?_v=20240425114721"></script>
 </body>
 
 </html>
