--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425114721">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425122829">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 	<div class="wrapper">
 		<header data-scroll class="header">
 			<div class="header__container">
-				<div class="header__logo logo"><img src="img/logo.webp" alt="logo" /></div>
+				<div class="header__logo logo"><img src="img/logo.webp" alt="logo"></div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -33,13 +33,13 @@
 								<a class="menu__link" href="#">Tokenomics</a>
 							</li>
 							<li>
-								<button class="button">
+								<button data-da=".header__container,767.98,1" class="button">
 									<span>BUY NOW</span>
 								</button>
 							</li>
 						</ul>
 					</nav>
-					<button type="button " class="menu__icon icon-menu">
+					<button type="button" class="menu__icon icon-menu">
 						<span></span>
 					</button>
 				</div>
@@ -48,16 +48,16 @@
 
 		<main class="page">
 			<section class="page__hero hero">
-				<img class="hero__decor ibg" src="img/rays.webp" alt="Image" />
+				<img class="hero__decor ibg" src="img/rays.webp" alt="Image">
 				<div class="hero__container">
 					<div data-prlx-mouse class="hero__body">
 						<div class="hero__title-block">
 							<h1 class="hero__title title">
-								Welcome to <br />
+								Welcome to <br>
 								<span class="hero__highligh">Boo.</span>
 							</h1>
 							<div class="hero__title-bone ibg">
-								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image" />
+								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image">
 							</div>
 						</div>
 						<div class="hero__label">
@@ -76,27 +76,27 @@
 						</div>
 					</div>
 					<div class="hero__img">
-						<img class="hero__image ibg ibg--contain" src="img/dog.webp" alt="dog image" />
+						<img class="hero__image ibg ibg--contain" src="img/dog.webp" alt="dog image">
 					</div>
 				</div>
 
 				<div class="hero__social social strip">
 					<div class="social__container">
 						<ul class="social__list">
-							<li class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+							<li data-watch class="social__item">
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image"></a>
 							</li>
-							<li class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+							<li data-watch class="social__item">
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image"></a>
 							</li>
-							<li class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+							<li data-watch class="social__item">
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image"></a>
 							</li>
-							<li class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+							<li data-watch class="social__item">
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image"></a>
 							</li>
-							<li class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+							<li data-watch class="social__item">
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image"></a>
 							</li>
 						</ul>
 					</div>
@@ -105,17 +105,17 @@
 			<section class="page__what what">
 				<div class="what__container">
 					<div data-prlx-parent class="what__img">
-						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image" />
+						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image">
 					</div>
 					<div class="what__body">
 						<div data-prlx-mouse class="what__label button button--no-event">
-							What is $BOO?
+							<h2>What is $BOO?</h2>
 							<div class="what__decor">
-								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image" />
+								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image">
 								<!-- <img
                     class="what__image-decor-2 ellipse"
                     src="img/ellipse-decor.svg"
-                    alt="Image" /> -->
+                    alt="Image"> -->
 							</div>
 						</div>
 
@@ -143,7 +143,7 @@
 					<div class="buy__container">
 						<h2 data-prlx-mouse class="buy__title subtitle">How to Buy?</h2>
 						<div data-prlx-mouse class="buy__img img-decor">
-							<img class="buy__image ibg" src="img/paw.webp" alt="Image" />
+							<img class="buy__image ibg" src="img/paw.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 					<div class="buy-list__container">
 						<div class="buy-list__list">
 							<article data-watch class="buy__item item-buy">
-								<h4 class="item-buy__title">Create a Wallet</h4>
+								<h3 class="item-buy__title">Create a Wallet</h3>
 								<div class="item-buy__text">
 									<p>
 										You can obtain Tronlink or any other wallet app for free
@@ -161,14 +161,14 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/wallet.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/wallet.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/1.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/1.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
-								<h4 class="item-buy__title">Get some TRON</h4>
+								<h3 class="item-buy__title">Get some TRON</h3>
 								<div class="item-buy__text">
 									<p>
 										Have TRON in your wallet to switch to $BOO. If you do not
@@ -178,14 +178,14 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/tron.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/tron.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/2.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/2.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
-								<h4 class="item-buy__title">Buy from our Web</h4>
+								<h3 class="item-buy__title">Buy from our Web</h3>
 								<div class="item-buy__text">
 									<p>
 										You need to have TRON available in your wallet. If you do
@@ -195,14 +195,14 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/3.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/3.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
-								<h4 class="item-buy__title">Swap TRON for $BOO</h4>
+								<h3 class="item-buy__title">Swap TRON for $BOO</h3>
 								<div class="item-buy__text">
 									<p>
 										Use our contract address when switching TRON for our
@@ -211,14 +211,14 @@
 									</p>
 								</div>
 								<div class="item-buy__swap">
-									<h5 class="item-buy__swap-title">Booswap:</h5>
+									<h4 class="item-buy__swap-title">Booswap:</h4>
 									<div class="item-buy__swap-text">
 										CA: TRStG5LKhCFmVdKETp1SQHk18U
-										<img data-prlx-mouse class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image" />
+										<img data-prlx-mouse class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image">
 									</div>
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image">
 								</div>
 							</article>
 						</div>
@@ -229,17 +229,17 @@
 				<div class="booswap__strip strip">
 					<div class="booswap__container">
 						<div data-prlx-mouse class="booswap__img img-decor img-decor--right">
-							<img class="booswap__image ibg" src="img/swap.webp" alt="Image" />
+							<img class="booswap__image ibg" src="img/swap.webp" alt="Image">
 						</div>
 						<h2 data-prlx-mouse class="booswap__title subtitle">BooSwap.</h2>
 					</div>
 				</div>
 				<div class="booswap__container">
-					<img data-watch class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/paw.webp" alt="Image" />
-					<img data-prlx-mouse class="booswap__bone-rotate ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/bowl.webp" alt="Image" />
+					<img data-watch class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/paw.webp" alt="Image">
+					<img data-prlx-mouse class="booswap__bone-rotate ibg ibg--contain" src="img/bone-1.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bone-1.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bowl.webp" alt="Image">
 				</div>
 			</section>
 			<section class="page__tokenomics tokenomics">
@@ -249,7 +249,7 @@
 							Tokenomics
 						</h2>
 						<div data-prlx-mouse class="tokenomics__img img-decor">
-							<img class="tokenomics__image ibg" src="img/dollar.webp" alt="Image" />
+							<img class="tokenomics__image ibg" src="img/dollar.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -257,9 +257,9 @@
 					<div class="tokenomics__list">
 						<article data-watch class="tokenomics__item item-tokenomics">
 							<div class="item-tokenomics__header">
-								<h4 class="item-tokenomics__title">Token Information</h4>
+								<h3 class="item-tokenomics__title">Token Information</h3>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.webp" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.webp" alt="Image">
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -283,9 +283,9 @@
 						</article>
 						<article data-watch class="tokenomics__item item-tokenomics">
 							<div class="item-tokenomics__header">
-								<h4 class="item-tokenomics__title">Token Information</h4>
+								<h3 class="item-tokenomics__title">Token Information</h3>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.webp" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.webp" alt="Image">
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -296,14 +296,14 @@
 								<div class="item-tokenomics__row">
 									<div>Initial Supply</div>
 									<div>
-										420.69 <br />
+										420.69 <br>
 										Billion
 									</div>
 								</div>
 								<div class="item-tokenomics__row">
 									<div>Circulating Supply</div>
 									<div>
-										210.34 <br />
+										210.34 <br>
 										Billion
 									</div>
 								</div>
@@ -322,7 +322,7 @@
 				<div class="footer__column">
 					<div class="footer__title">Boo.</div>
 					<div class="footer__decor">
-						<img class="footer__decor-img ibg ibg--contain" src="img/bone.webp" alt="Image" />
+						<img class="footer__decor-img ibg ibg--contain" src="img/bone.webp" alt="Image">
 					</div>
 					<div class="footer__text">
 						<p>
@@ -334,20 +334,20 @@
 				</div>
 				<div class="footer__social social">
 					<ul class="social__list">
-						<li class="social__item">
-							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+						<li data-watch class="social__item">
+							<a href="#"><img data-watch class="social__link ibg" src="img/1.svg" alt="Image"></a>
 						</li>
-						<li class="social__item">
-							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+						<li data-watch class="social__item">
+							<a href="#"><img data-watch class="social__link ibg" src="img/x.webp" alt="Image"></a>
 						</li>
-						<li class="social__item">
-							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+						<li data-watch class="social__item">
+							<a href="#"><img data-watch class="social__link ibg" src="img/3.svg" alt="Image"></a>
 						</li>
-						<li class="social__item">
-							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+						<li data-watch class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image"></a>
 						</li>
-						<li class="social__item">
-							<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+						<li data-watch class="social__item">
+							<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image"></a>
 						</li>
 					</ul>
 				</div>
@@ -360,14 +360,14 @@
 					Made by © 2024 Boo • All Rights Reserved @2024
 				</div>
 				<div class="footer__img">
-					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image" />
+					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image">
 				</div>
 			</div>
-			<img class="footer__image-decor ibg" src="img/rays.webp" alt="Image" />
+			<img class="footer__image-decor ibg" src="img/rays.webp" alt="Image">
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425114721"></script>
+	<script src="js/app.min.js?_v=20240425122829"></script>
 </body>
 
 </html>
