--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425122829">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425124340">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Welcome to Boo - I am the first original dog on TronNetwork.">
 </head>
 
 <body>
 	<div class="wrapper">
 		<header data-scroll class="header">
 			<div class="header__container">
-				<div class="header__logo logo"><img src="img/logo.webp" alt="logo"></div>
+				<div class="header__logo logo"><img src="img/logo.webp" alt="logo" /></div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -367,7 +368,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425122829"></script>
+	<script src="js/app.min.js?_v=20240425124340"></script>
 </body>
 
 </html>
