--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425143234">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425143751">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,20 +17,20 @@
 	<div class="wrapper">
 		<header data-scroll class="header">
 			<div class="header__container">
-				<div class="header__logo logo"><img src="img/logo.webp" alt="logo" /></div>
+				<div class="header__logo logo"><img src="img/logo.webp" alt="logo"></div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li data-goto-header data-goto=".hero" class="menu__item">
 								<a class="menu__link" href="#">Home </a>
 							</li>
-							<li data-goto-header data-goto=".popular" class="menu__item">
+							<li data-goto-header data-goto=".what" class="menu__item">
 								<a class="menu__link" href="#">About</a>
 							</li>
-							<li data-goto-header data-goto=".custom" class="menu__item">
+							<li data-goto-header data-goto=".buy" class="menu__item">
 								<a class="menu__link" href="#">How to buy</a>
 							</li>
-							<li data-goto-header data-goto=".deals" class="menu__item">
+							<li data-goto-header data-goto=".tokenomics" class="menu__item">
 								<a class="menu__link" href="#">Tokenomics</a>
 							</li>
 							<li>
@@ -49,16 +49,16 @@
 
 		<main class="page">
 			<section class="page__hero hero">
-				<img class="hero__decor ibg" src="img/rays.webp" alt="Image" />
+				<img class="hero__decor ibg" src="img/rays.webp" alt="Image">
 				<div class="hero__container">
 					<div data-prlx-mouse class="hero__body">
 						<div class="hero__title-block">
 							<h1 class="hero__title title">
-								Welcome to <br />
+								Welcome to <br>
 								<span class="hero__highligh">Boo.</span>
 							</h1>
 							<div class="hero__title-bone ibg">
-								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image" />
+								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image">
 							</div>
 						</div>
 						<div class="hero__label">
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<div class="hero__img">
-						<img class="hero__image ibg ibg--contain" src="img/dog.webp" alt="dog image" />
+						<img class="hero__image ibg ibg--contain" src="img/dog.webp" alt="dog image">
 					</div>
 				</div>
 
@@ -85,19 +85,19 @@
 					<div class="social__container">
 						<ul class="social__list">
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image" /></a>
+								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image"></a>
 							</li>
 						</ul>
 					</div>
@@ -106,13 +106,13 @@
 			<section class="page__what what">
 				<div class="what__container">
 					<div data-prlx-parent class="what__img">
-						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image" />
+						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image">
 					</div>
 					<div class="what__body">
 						<div data-prlx-mouse class="what__label button button--no-event">
 							<h2>What is $BOO?</h2>
 							<div class="what__decor">
-								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image" />
+								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image">
 								<!-- <img
                     class="what__image-decor-2 ellipse"
                     src="img/ellipse-decor.svg"
@@ -144,7 +144,7 @@
 					<div class="buy__container">
 						<h2 data-prlx-mouse class="buy__title subtitle">How to Buy?</h2>
 						<div data-prlx-mouse class="buy__img img-decor">
-							<img class="buy__image ibg" src="img/paw.webp" alt="Image" />
+							<img class="buy__image ibg" src="img/paw.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -162,10 +162,10 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/wallet.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/wallet.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/1.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/1.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
@@ -179,10 +179,10 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/tron.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain" src="img/tron.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/2.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/2.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
@@ -196,10 +196,10 @@
 									</p>
 								</div>
 								<div class="item-buy__icon">
-									<img data-prlx-mouse class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.webp" alt="Image" />
+									<img data-prlx-mouse class="item-buy__image ibg ibg--contain ibg--contain" src="img/buy.webp" alt="Image">
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/3.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/3.webp" alt="Image">
 								</div>
 							</article>
 							<article data-watch class="buy__item item-buy">
@@ -215,11 +215,11 @@
 									<h4 class="item-buy__swap-title">Booswap:</h4>
 									<div class="item-buy__swap-text">
 										CA: TRStG5LKhCFmVdKETp1SQHk18U
-										<img data-prlx-mouse class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image" />
+										<img data-prlx-mouse class="item-buy__swap-copy ibg" src="img/copy.svg" alt="Image">
 									</div>
 								</div>
 								<div class="item-buy__number">
-									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image" />
+									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image">
 								</div>
 							</article>
 						</div>
@@ -230,17 +230,17 @@
 				<div class="booswap__strip strip">
 					<div class="booswap__container">
 						<div data-prlx-mouse class="booswap__img img-decor img-decor--right">
-							<img class="booswap__image ibg" src="img/swap.webp" alt="Image" />
+							<img class="booswap__image ibg" src="img/swap.webp" alt="Image">
 						</div>
 						<h2 data-prlx-mouse class="booswap__title subtitle">BooSwap.</h2>
 					</div>
 				</div>
 				<div class="booswap__container">
-					<img data-watch class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/paw.webp" alt="Image" />
-					<img data-prlx-mouse class="booswap__bone-rotate ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/bone-1.webp" alt="Image" />
-					<img data-prlx-mouse class="ibg ibg--contain" src="img/bowl.webp" alt="Image" />
+					<img data-watch class="booswap__img-content ibg" src="img/booswap-img.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/paw.webp" alt="Image">
+					<img data-prlx-mouse class="booswap__bone-rotate ibg ibg--contain" src="img/bone-1.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bone-1.webp" alt="Image">
+					<img data-prlx-mouse class="ibg ibg--contain" src="img/bowl.webp" alt="Image">
 				</div>
 			</section>
 			<section class="page__tokenomics tokenomics">
@@ -250,7 +250,7 @@
 							Tokenomics
 						</h2>
 						<div data-prlx-mouse class="tokenomics__img img-decor">
-							<img class="tokenomics__image ibg" src="img/dollar.webp" alt="Image" />
+							<img class="tokenomics__image ibg" src="img/dollar.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -260,7 +260,7 @@
 							<div class="item-tokenomics__header">
 								<h3 class="item-tokenomics__title">Token Information</h3>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.webp" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/paws.webp" alt="Image">
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -286,7 +286,7 @@
 							<div class="item-tokenomics__header">
 								<h3 class="item-tokenomics__title">Token Information</h3>
 								<div class="item-tokenomics__decor">
-									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.webp" alt="Image" />
+									<img class="item-tokenomics__img ibg ibg--contain" src="img/bones.webp" alt="Image">
 								</div>
 							</div>
 							<div class="item-tokenomics__body">
@@ -297,14 +297,14 @@
 								<div class="item-tokenomics__row">
 									<div>Initial Supply</div>
 									<div>
-										420.69 <br />
+										420.69 <br>
 										Billion
 									</div>
 								</div>
 								<div class="item-tokenomics__row">
 									<div>Circulating Supply</div>
 									<div>
-										210.34 <br />
+										210.34 <br>
 										Billion
 									</div>
 								</div>
@@ -368,7 +368,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425143234"></script>
+	<script src="js/app.min.js?_v=20240425143751"></script>
 </body>
 
 </html>
