--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425143751">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425150036">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,8 +50,8 @@
 		<main class="page">
 			<section class="page__hero hero">
 				<img class="hero__decor ibg" src="img/rays.webp" alt="Image">
-				<div class="hero__container">
-					<div data-prlx-mouse class="hero__body">
+				<div data-prlx-parent class="hero__container">
+					<div data-prlx class="hero__body">
 						<div class="hero__title-block">
 							<h1 class="hero__title title">
 								Welcome to <br>
@@ -109,7 +109,7 @@
 						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image">
 					</div>
 					<div class="what__body">
-						<div data-prlx-mouse class="what__label button button--no-event">
+						<div class="what__label button button--no-event">
 							<h2>What is $BOO?</h2>
 							<div class="what__decor">
 								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image">
@@ -368,7 +368,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425143751"></script>
+	<script src="js/app.min.js?_v=20240425150036"></script>
 </body>
 
 </html>
