--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425152814">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425154213">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -352,11 +352,13 @@
 						</li>
 					</ul>
 				</div>
-				<!-- <div class="footer__copy">
+			</div>
+			<!-- <div class="footer__copy">
       Made by
       <a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a>
       @2024
     </div> -->
+			<div class="footer__container">
 				<div class="footer__copy">
 					Made by © 2024 Boo • All Rights Reserved @2024
 				</div>
@@ -364,11 +366,12 @@
 					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image">
 				</div>
 			</div>
+
 			<img class="footer__image-decor ibg" src="img/rays.webp" alt="Image">
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425152814"></script>
+	<script src="js/app.min.js?_v=20240425154213"></script>
 </body>
 
 </html>
